# linux-security-scanner

./: .gitignore  README.md
.claude/: plan.md
confrisk/: .gitignore  CONFIG_IMPLEMENTATION_SUMMARY.md  CONFIG_QUICKSTART.md  CONFIG_SYSTEM.md  CONFRISK_NPM.md  Cargo.toml  DEMO_RESULTS.md  GITIGNORE_SETUP.md  NEW_FEATURES.md  NPM_SCANNER_SUMMARY.md  PRESENTATION_GUIDE.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICK_START.md  README.md  TECHNICAL_REPORT.md  install.sh
confrisk/config/: categories.json  scoring.json
confrisk/config/checks/: shadow-permissions.json  ssh-root-login.json
confrisk/config/plugins/: gitleaks.json  lynis.json  osv-scanner.json  trivy.json
confrisk/config/rules/: dependencies.json  ports.json
confrisk/demo/: .gitignore  Dockerfile.build  Dockerfile.selfcontained  Dockerfile.vulnerable  README.md  build.sh  docker-compose.yml
confrisk/examples/npm-project-demo/: .gitignore  README.md  index.js  package-lock.json  package.json
confrisk/examples/npm-project-demo/.github/workflows/: security-scan.yml
confrisk/examples/npm-project-demo/.husky/: pre-commit
confrisk/scripts/: build-deb.sh
confrisk/src/: checks.rs  config.rs  lib.rs  main.rs  model.rs  npm.rs  report.rs
